--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,7 +4,8 @@
     "description": "Self-proclaimed most annoying website on the web with so many disgusting features of modern websites you might even vomit at some point.",
     "recruiting": "Want to extend what you see here? Visit our <linkTag>GitHub</linkTag> repo to get started.",
     "aiDisclose": "AI text and image generation was used to produce contents of this website.",
-    "copyright": "Copyright © {{year}} The Most Annoying Website"
+    "copyright": "Copyright © {{year}} The Most Annoying Website",
+    "cookieConsent": "This website uses cookies to ensure you get the best experience on our website. It's also a joke so many of the features are buggy or doens't even work on purpose. You can customize your experience and cookie settings in the settings menu."
   },
   "navigation": {
     "home": "Home",
@@ -94,12 +95,62 @@
       }
     }
   },
-  "cookieConsent": "This website uses cookies to ensure you get the best experience on our website. It's also a joke so many of the features are buggy or doens't even work on purpose. You can customize your experience and cookie settings in the settings menu.",
-  "themeSwitch": {
-    "label": "Switch theme",
-    "darkMode": "Dark mode",
-    "lightMode": "Light mode"
+  "settings": {
+    "userPreferences": {
+      "title": "Preferences",
+      "colorScheme": "Theme / Color scheme",
+      "darkMode": "Dark mode",
+      "enableFlashing": "Flashing contents",
+      "enableSound": "Sound",
+      "adultFilter": "Filter adult contents",
+      "themeSwitch": {
+        "label": "Switch theme",
+        "darkMode": "Dark mode",
+        "lightMode": "Light mode"
+      }
+    },
+    "userGrants": {
+      "title": "Consent and permissions",
+      "permissionDisclaimer": "Permission settings are managed by the browser, if you want to change theme you can do it from the site settings in your browser.",
+      "essentialCookies": "Allow essential cookies",
+      "notificationPermission": "Notification permission",
+      "locationPermission": "Location permission"
+    },
+    "experienceFlags": {
+      "title": "Optional experience",
+      "gifts": {
+        "flaps": "Background ad flaps",
+        "oneByOne": "One by one ad blocks"
+      },
+      "contentPaywall": "Content paywall",
+      "deadPixel": "Dead pixel",
+      "exitPrompt": "Exit prompt",
+      "mockChat": "Bubble chat",
+      "newsletterModal": "Newsletter popup modal",
+      "notifications": "Notifications",
+      "pageTitleInactiveArrayPaged": "Alternative title when tab is inactive",
+      "searchDelay": "Fake search delay",
+      "wheelOfFortune": "Wheel of fortune",
+      "stickyVideo": "Sticky video"
+    },
+    "mandatoryExperienceFlags": {
+      "title": "Mandatory experience",
+      "impossibleLogin": "Impossible login",
+      "impossibleRegistration": "Impossible registration",
+      "impossiblePasswordReminder": "Impossible password reminder",
+      "unreasonableContent": "Unreasonable content"
+    },
+    "runtime": {
+      "title": "About this session",
+      "disclaimer": "These values reset every single visit and acts as a bit of debug info.",
+      "startedAgo": "Started:",
+      "visibilitySeconds": "Elapsed seconds:",
+      "isDocumentVisible": "Is this window in focus?",
+      "navigationCount": "Navigation count:",
+      "interactionUnlocked": "Had first interaction?"
+    }
   },
+
   "captcha": {
     "field": "Captcha",
     "captchaEmojiHint": "Count the emojis and identify which one appears the most. Look carefully, as parts of some emojis might be obscured.",
