--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -56,10 +56,33 @@
     "notSet": "Not set",
     "unknown": "Unknown"
   },
-  "share": {
-    "modal": {
-      "title": "Share this page",
-      "description": "Spread the misery! Be sure to inflict this painfully obnoxious website on your friends too — why suffer alone when you can drag them down with you?"
+  "date": {
+    "months": [
+      "January",
+      "February",
+      "March",
+      "April",
+      "May",
+      "June",
+      "July",
+      "August",
+      "September",
+      "October",
+      "November",
+      "December"
+    ],
+    "weekdays": [
+      "Sunday",
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday"
+    ],
+    "formats": {
+      "long": "MMM D, YYYY",
+      "short": "M/D/YYYY"
     }
   },
   "form": {
@@ -69,7 +92,7 @@
       "captchaTilePuzzleHint": "Slide the tiles into their right position. You can only move the ones directly next to each other."
     },
     "validation": {
-      "errors": {
+      "error": {
         "required": "This field is required.",
         "minLength": "Minimum length is {{count}} characters",
         "maxLength": "Maximum length is {{count}} characters",
@@ -103,7 +126,7 @@
       }
     }
   },
-  "auth": {
+  "user": {
     "common": {
       "registerAccount": "Need an account?",
       "forgotPassword": "Forgot password?",
@@ -126,7 +149,7 @@
       "rememberMe": "Remember me",
       "username": "Username"
     },
-    "forms": {
+    "form": {
       "login": {
         "genericError": "Login failed",
         "callToAction": "Login"
@@ -140,7 +163,7 @@
         "callToAction": "Send password reminder"
       }
     },
-    "genders": {
+    "genderVariants": {
       "alien": "Alien",
       "chymera": "Chymera",
       "cyborg": "Cyborg",
@@ -171,7 +194,7 @@
       "notificationPermission": "Notification permission",
       "locationPermission": "Location permission"
     },
-    "experienceFlags": {
+    "optionalExperienceFlags": {
       "title": "Optional experience",
       "gifts": {
         "flaps": "Background ad flaps",
@@ -203,6 +226,18 @@
       "isDocumentVisible": "Is this window in focus?",
       "navigationCount": "Navigation count:",
       "interactionUnlocked": "Had first interaction?"
+    }
+  },
+  "share": {
+    "modal": {
+      "title": "Share this page",
+      "description": "Spread the misery! Be sure to inflict this painfully obnoxious website on your friends too — why suffer alone when you can drag them down with you?"
+    }
+  },
+  "notification": {
+    "modal": {
+      "title": "You can manually change the notification permission up here",
+      "description": "We would like to send you notifications sometimes, could you be so kind to allow us to do so? 🙏🥺🙏"
     }
   },
   "newsletter": {
@@ -237,6 +272,14 @@
       ]
     }
   },
+  "paywall": {
+    "overlay": {
+      "title": "You either gotta pay $0.69/hour with 24 months of commitment in order to see the next paragraph or need to keep clicking the secondary button.",
+      "disclaimer": "it might not be as secure and legit but that doesn't matter because you can't actually pay on this website.",
+      "confirm": "Pay! 100% legit and secure",
+      "cancel": "Give me free stuff for free"
+    }
+  },
   "article": {
     "coverImage": "Cover image",
     "published": "Published at {{date}}"
@@ -251,22 +294,6 @@
       "📣 COME BACK 🏃"
     ]
   },
-    "date": {
-      "months": [
-        "January",
-        "February",
-        "March",
-        "April",
-        "May",
-        "June",
-        "July",
-        "August",
-        "September",
-        "October",
-        "November",
-        "December"
-      ]
-    },
   "search": {
     "placeholder": "Search...",
     "noResults": "No results found",
@@ -300,5 +327,38 @@
     "wanPhone": {
       "title": "Congratulations! You've wan a phone!"
     }
+  },
+  "wheelOfFortune": {
+    "title": "Wheel of fortune",
+    "spinStart": "Let's spin the wheel!!",
+    "spinWin": "You won! {{prize}}",
+    "prizeVariants": {
+      "freeLifetimeBeer": "Free lifetime beer",
+      "worldPeace": "World peace",
+      "absolutellyNothing": "Absolutelly nothing",
+      "complimentaryOtter": "Complimentary otter",
+      "fake70Discount": "Fake 70% discount"
+    }
+  },
+  "chatBubble": {
+    "messageInitial": "Hello! I am a chat bubble. I am here to help you. 🤓",
+    "messageVariants": [
+      "Come on, let me help you!",
+      "I can't hear you! Speak louder!",
+      "Who lives under the sea?",
+      "The FitnessGram Pacer Test is a multistage aerobic capacity test that progressively gets more difficult as it continues.",
+      "Sorry, I'm going through a tunnel right now. Can you repeat that?",
+      "You must have missed my previous messages. I'm kind of lonely.",
+      "Wondering if my messages got caught in a time warp. Feeling like I'm at a party where everyone's speaking Simlish.",
+      "My messages must be on a ghosting spree. Feeling ignored.",
+      "Ah, the sweet sound of silence. My messages must be enjoying their newfound solitude."
+    ],
+    "messageFallback": "It's nothing, leave me alone. 😤",
+    "newAlert": "New message from Chat Bubble! 🎉",
+    "hudTitle": "Chat with a \"100% real huuman\"",
+    "hudTitleDisclaimer": "Disclaimer: Actually, this is a bot that almost feels like a real human (not a smart one) but it's still just a bot",
+    "agentIsTyping": "Agent is typing",
+    "yourMessage": "Your message",
+    "yourMessagePlaceholder": "Type here..."
   }
 }
