chore(gift): rename files, update translations, update goals

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -325,7 +325,7 @@
       "flapRight": "DILF. Tastiest donuts in your proximity"
     },
     "wanPhone": {
-      "title": "Congratulations! You've wan a phone!"
+      "title": "Congratulations! You've wan a phone! Flaim now!"
     }
   },
   "wheelOfFortune": {
