feat(gifts): add flaim your phone to mandatory settings

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -216,7 +216,8 @@
       "impossibleLogin": "Impossible login",
       "impossibleRegistration": "Impossible registration",
       "impossiblePasswordReminder": "Impossible password reminder",
-      "unreasonableContent": "Unreasonable content"
+      "unreasonableContent": "Unreasonable content",
+      "flaimYourPhone": "Flaim your phone"
     },
     "runtime": {
       "title": "About this session",
