feat(i18n): move a few more items under common

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -478,5 +478,14 @@
     "agentIsTyping": "Agent is typing",
     "yourMessage": "Your message",
     "yourMessagePlaceholder": "Type here..."
+  },
+  "messages": {
+    "errors": {
+      "e404title": "Error 404",
+      "e404description": "Page not found, how could this happen"
+    },
+    "info": {
+      "pictureOfYou": "Picture of you"
+    }
   }
 }
