--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -205,6 +205,7 @@
       },
       "contentPaywall": "Content paywall",
       "deadPixel": "Dead pixel",
+      "disableContextMenu": "Disable context (right click) menu",
       "exitPrompt": "Exit prompt",
       "mockChat": "Bubble chat",
       "newsletterModal": "Newsletter popup modal",
@@ -501,5 +502,8 @@
     "diamondColorB": "Diamond Color B",
     "width": "Width",
     "height": "Height"
+  },
+  "contextMenu": {
+    "disabled": "Hey, you can't right click here!"
   }
 }
