--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -40,6 +40,8 @@
     "next": "Next",
     "accept": "Accept",
     "decline": "Decline",
+    "done": "Done",
+    "pending": "Pending",
     "submit": "Submit",
     "save": "Save",
     "send": "Send",
@@ -200,6 +202,7 @@
     "optionalExperienceFlags": {
       "title": "Optional experience",
       "gifts": {
+        "detectAdblocker": "Detect adblocker",
         "flaps": "Background ad flaps",
         "oneByOne": "One by one ad blocks"
       },
@@ -230,7 +233,10 @@
       "visibilitySeconds": "Elapsed seconds:",
       "isDocumentVisible": "Is this window in focus?",
       "navigationCount": "Navigation count:",
-      "interactionUnlocked": "Had first interaction?"
+      "interactionUnlocked": "Had first interaction?",
+      "flaimSurveyResult": "Flaim survey result:",
+      "adblockerSuspected": "Adblocker suspected",
+      "adblockerNotDetected": "Adblocker not detected"
     }
   },
   "share": {
@@ -448,6 +454,10 @@
           }
         ]
       }
+    },
+    "suspectBar": {
+      "title": "Adblocker suspected!",
+      "description": "It looks like you're using an ad blocker. That's a bit odd, innit? You're missing out big time! Please consider turning it off. Until then, you'll see this huge red banner at the bottom every time you visit this site. And please don't close it using the OK button, either. Cheers!"
     }
   },
   "wheelOfFortune": {
