feat(clipboard): add settings toggle

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -208,6 +208,7 @@
         "flaps": "Background ad flaps",
         "oneByOne": "One by one ad blocks"
       },
+      "clipboardMarker": "Clipboard marker",
       "contentPaywall": "Content paywall",
       "deadPixel": "Dead pixel",
       "disableContextMenu": "Disable context (right click) menu",
