feat(history-spam): add toggle to settings and store

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -217,6 +217,7 @@
       "deadPixel": "Dead pixel",
       "disableContextMenu": "Disable context (right click) menu",
       "exitPrompt": "Exit prompt",
+      "historySpam": "History spam",
       "mockChat": "Bubble chat",
       "newsletterModal": "Newsletter popup modal",
       "notifications": "Notifications",
