--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -4,7 +4,7 @@
     "description": "Self-proclaimed most annoying website on the web with so many disgusting features of modern websites you might even vomit at some point.",
     "recruiting": "Want to extend what you see here? Visit our <linkTag>GitHub</linkTag> repo to get started.",
     "aiDisclose": "AI text and image generation was used to produce contents of this website.",
-    "copyright": "Copyright © {{year}} The Most Annoying Website",
+    "copyright": "Copyright © {year} The Most Annoying Website",
     "dataStorageDisclaimer": "We don't store any form data of: newsletter subscriptions, login, registration, password reminder.",
     "cookieConsent": "This website uses cookies to ensure you get the best experience on our website. It's also a joke so many of the features are buggy or doens't even work on purpose. You can customize your experience and cookie settings in the settings menu.",
     "donate": {
