chore: sync metadata generation for all pages

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -34,6 +34,60 @@
     "hotThings": "Hot things",
     "dilf": "DILF"
   },
+  "metadata": {
+    "about": {
+      "title": "About us",
+      "description": "Discover the story behind this website, its origins, and the passionate creators and contributors who bring it to life."
+    },
+    "contact": {
+      "title": "Contact",
+      "description": "Have a question, suggestion, or just want to say hello? Reach out to us here and we'll be happy to connect."
+    },
+    "dilf": {
+      "title": "DILF - Donut I'd Like to Feast On",
+      "description": "An irresistibly sweet concept that combines indulgence with fun. Find out more here."
+    },
+    "donate": {
+      "title": "Donate",
+      "description": "Your support makes a world of difference! Contribute here to help us continue creating amazing experiences."
+    },
+    "wanPhone": {
+      "title": "Flaim a phone",
+      "description": "Ready for some fiery fun? Flaim a phone here and see how we bring the heat to your mobile experience."
+    },
+    "hotThings": {
+      "title": "Hot things",
+      "description": "Discover the hottest trends, ideas, and creations we're passionate about. Explore all the sizzling content here."
+    },
+    "privacyPolicy": {
+      "title": "Privacy Policy",
+      "description": "We value your privacy. Read our Privacy Policy here to learn how we protect your personal information and data."
+    },
+    "search": {
+      "title": "Search",
+      "description": "Looking for something specific? Search here to quickly find exactly what you're looking for, no matter where it is on our site."
+    },
+    "settings": {
+      "title": "Settings",
+      "description": "Customize your experience to suit your preferences. Explore the settings here and make everything just the way you like it."
+    },
+    "userLogin": {
+      "title": "Login",
+      "description": "Welcome back! Log in here to access your personalized content and all the features exclusive to you."
+    },
+    "userPasswordReminder": {
+      "title": "Password Reminder",
+      "description": "Forgot your password? Don't worry! Use the Password Reminder feature here to quickly get back on track."
+    },
+    "userRegistration": {
+      "title": "Registration",
+      "description": "Join our community today! Register here to unlock a world of exclusive content and personalized experiences."
+    },
+    "virgin": {
+      "title": "Disable all experiences",
+      "description": "Looking for a no-frills experience? Disable all personalized features here and enjoy a streamlined, distraction-free version of our site."
+    }
+  },
   "common": {
     "yes": "Yes",
     "no": "No",
